# NovaScale-Upscaler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
core/: main.c  present_dx11.c  upscale_spatial.c
docs/: architecture.md
ui/: main_window.py  settings.py
